--- a/trunk/sketch/croquispop.html
+++ b/trunk/sketch/croquispop.html
@@ -75,6 +75,8 @@
       <br>
       <button type="button" id="fill-button">fill layer</button>
       <br>
+      <input type="file" id="upload-button"></input>
+      <br>
       <button type="button" id="merge-button">merge layer</button>
     </div>
     <p class="comment">If pressure is not applied, try installing the
