--- a/sketch/croquispop.html
+++ b/sketch/croquispop.html
@@ -38,7 +38,7 @@
     <div id="right-side">
       <div id="color-picker">
         <div id="color-picker-sb">
-        </div>
+        </div>        
         <span>hue: </span>
         <input id="color-picker-hue-slider" type="range" min="0" max="360">
         <br>
@@ -46,9 +46,10 @@
         <input id="brush-opacity-slider" type="range" min="0" max="100">
         <br>
         <span>color: </span>
-        <div id="color-picker-checker">
-          <p id="color-picker-color"></p>
-        </div>
+        <div id="color-picker-checker-frame">
+          <div id="color-picker-checker"></div>
+          <input type="text" id="input-hex-color">
+         </div> 
       </div>
       <hr>
       <div id="brush-shelf">
