--- a/trunk/sketch/croquispop.html
+++ b/trunk/sketch/croquispop.html
@@ -31,6 +31,9 @@
       <img src="./img/brush/b6.png" class="brush-image"></img>
     </div>
 
+    <div id="geometry-shelf">
+      <input type="button" id="btn-rectangle" value="rectangle">
+    </div>
     <div id="canvas-area">      
       
     </div>
@@ -90,8 +93,7 @@
     <script src="./TinyColor/tinycolor.js"></script>
     <script src="./HSBRect/HSBRect.js"></script>
     <script src="./croquis.js/croquis.js"></script>
-    <script src="./croquispop.js"></script>
-    
+    <script src="./croquispop.js"></script>   
     <!--[if lt IE 10]>
     <script>
       // code from: http://stackoverflow.com/a/4448965/1711246
