--- a/trunk/sketch/croquispop.html
+++ b/trunk/sketch/croquispop.html
@@ -3,10 +3,10 @@
   <head>
   <meta charset="UTF-8">
   <title>Croquispop</title>
-  <link rel="stylesheet" type="text/css" href="./croquispop.css">
-  <link rel="stylesheet" type="text/css" href="css/component.css">
+  <link rel="stylesheet" type="text/css" href="./css/croquispop.css">
+  <link rel="stylesheet" type="text/css" href="./css/component.css">
    
-  <script src="./hand.minified-1.3.6.js"></script>
+  <script src="./js/hand.minified-1.3.6.js"></script>
   <script src="./js/jquery-2.1.1.min.js"></script>
   </head>
   <body unselectable="on">
@@ -93,7 +93,7 @@
     <script src="./TinyColor/tinycolor.js"></script>
     <script src="./HSBRect/HSBRect.js"></script>
     <script src="./croquis.js/croquis.js"></script>
-    <script src="./croquispop.js"></script>   
+    <script src="./js/croquispop.js"></script>   
     <!--[if lt IE 10]>
     <script>
       // code from: http://stackoverflow.com/a/4448965/1711246
