--- a/sketch/croquispop.html
+++ b/sketch/croquispop.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./css/component.css">
    
   <script src="./js/hand.minified-1.3.6.js"></script>
-  <script src="./js/jquery-2.1.1.min.js"></script>
+  <script src="./js/jquery-2.1.1.min.js"></script>  
   </head>
   <body unselectable="on">
     <object id="tablet-api" type="application/x-wacomtabletplugin"></object>
@@ -32,7 +32,7 @@
     </div>
 
     <div id="geometry-shelf">
-      <input type="button" id="btn-rectangle" value="rectangle">
+      <button id="btn-rectangle" title="Rectangle" class="geo-button icon-rect"></button>
     </div>
     <div id="canvas-area">      
       
@@ -90,6 +90,7 @@
     <script src="./input-range-polyfill/input-range-polyfill.js"></script>
     <![endif]-->
 
+    <script src="./js/svg_todataurl.js"></script>
     <script src="./TinyColor/tinycolor.js"></script>
     <script src="./HSBRect/HSBRect.js"></script>
     <script src="./croquis.js/croquis.js"></script>
@@ -110,5 +111,6 @@
       makeUnselectable(document.body);
     </script>
     <![endif]-->
+    <div id="data"></div>
   </body>
 </html>
