--- a/trunk/sketch/croquispop.html
+++ b/trunk/sketch/croquispop.html
@@ -33,6 +33,9 @@
 
     <div id="geometry-shelf">
       <button id="btn-rectangle" title="Rectangle" class="geo-button icon-rect"></button>
+      <button id="btn-triangle" title="Triangle" class="geo-button icon-tri"></button>
+      <button id="btn-round" title="Round" class="geo-button icon-round"></button>
+      <button id="btn-star" title="Star" class="geo-button icon-star"></button>
     </div>
     <div id="canvas-area">      
       
