--- a/sketch/croquispop.html
+++ b/sketch/croquispop.html
@@ -79,22 +79,22 @@
         <input id="brush-rotate-to-direction-checkbox" type="checkbox">
       </div>
       <hr>
-      <button type="button" id="clear-button">erase all</button>
-      <br>
-      <button type="button" id="fill-button">fill layer</button>
-      <br>
+      <button id="clear-button">erase all</button>&nbsp      
+      <button id="fill-button">fill layer</button>&nbsp
+      <button id="merge-button">merge layer</button>
+      <br/>
       <input type="file" id="upload-button"></input>
-      <br>
-      <button type="button" id="merge-button">merge layer</button>
+      <br/>
+      <button id="btn-flip-horizon">flip horizontally</button>&nbsp
+      <button id="btn-flip-vertical">flip vertically</button>
+      
     </div>
     <p class="comment">If pressure is not applied, try installing the
       <a href="http://www.wacom.com/support/drivers" target="_blank">
         recent version of the graphics tablet driver.</a></p>
     <!--[if lt IE 11]>
     <script src="./input-range-polyfill/input-range-polyfill.js"></script>
-    <![endif]-->
-
-    <script src="./js/svg_todataurl.js"></script>
+    <![endif]-->   
     <script src="./TinyColor/tinycolor.js"></script>
     <script src="./HSBRect/HSBRect.js"></script>
     <script src="./croquis.js/croquis.js"></script>
