--- a/trunk/sketch/sketch.html
+++ b/trunk/sketch/sketch.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  <meta charset="UTF-8">
-  <title>Croquispop</title>
-  <link rel="stylesheet" type="text/css" href="./css/croquispop.css">
-  <link rel="stylesheet" type="text/css" href="./css/component.css">
-   
-  <script src="./js/hand.minified-1.3.6.js"></script>
-  <script src="./js/jquery-2.1.1.min.js"></script>  
-  </head>
-  <body unselectable="on">
-    <object id="tablet-api" type="application/x-wacomtabletplugin"></object>
-    <div id="tool-shelf" style="display:none;">
-      <span>Stabilizer level: </span>
-      <input id="tool-stabilize-level-slider" type="range" min="3" max="20">
-      <span>weight: </span>
-      <input id="tool-stabilize-weight-slider" type="range" min="20" max="80">
-      <br>
-      <span class="comment">(Higher stabilizer level makes lines smoother,
-        and higher weight makes rendering slower.)</span>
-    </div>
-    <div id="brush-image-shelf">
+<html lang="en" class="no-js">
+	<head>	
+	<meta charset="UTF-8">
+  	<title>Couple T-Shirt Designer</title>
+  	<link rel="stylesheet" type="text/css" href="./css/sketch.css">
+  	<link rel="stylesheet" type="text/css" href="./css/component.css">	
+	</head>
+	<body unselectable="on">
+	<div id="brush-image-shelf">
       <div class="brush-image on" id="circle-brush"></div>
       <img src="./img/brush/b0.png" class="brush-image"></img>
       <img src="./img/brush/b1.png" class="brush-image"></img>
@@ -30,7 +17,6 @@
       <img src="./img/brush/b5.png" class="brush-image"></img>
       <img src="./img/brush/b6.png" class="brush-image"></img>
     </div>
-
     <div id="geometry-shelf">
       <button id="btn-selector" title="Selector" class="geo-button icon-selector"></button>
       <button id="btn-rectangle" title="Rectangle [dbl click in object to delete]" class="geo-button icon-rect"></button>
@@ -40,10 +26,10 @@
       <button id="btn-heart" title="Heart [dbl click in object to delete]" class="geo-button icon-heart"></button>
       <button id="btn-crop" title="Create copy [hit del button to delete]" class="geo-button icon-crop"></button>
     </div>
-    <br />
-    <div id="canvas-area"></div>
+    <br/>
+	<div id="canvas-area" ></div>
 
-    <div id="right-side">
+	<div id="right-side">
       <div id="color-picker">
         <div id="color-picker-sb">
         </div>        
@@ -66,18 +52,7 @@
         <hr>
         <span>Brush size: </span>
         <input id="brush-size-slider" type="range" min="1" max="100">
-        <br>
-        <span>flow: </span>
-        <input id="brush-flow-slider" type="range" min="0" max="100">
-        <br>
-        <span>spacing: </span>
-        <input id="brush-spacing-slider" type="range" min="0" max="1000">
-        <br>
-        <span>angle: </span>
-        <input id="brush-angle-slider" type="range" min="0" max="360">
-        <br>
-        <span>rotate to direction: </span>
-        <input id="brush-rotate-to-direction-checkbox" type="checkbox">
+        <br>       
       </div>
       <hr>
       <button id="clear-button">erase all</button>&nbsp      
@@ -90,31 +65,7 @@
       <button id="btn-flip-vertical">flip vertically</button>
       
     </div>
-    
-    <!--[if lt IE 11]>
-    <script src="./input-range-polyfill/input-range-polyfill.js"></script>
-    <![endif]-->   
-    <script src="./TinyColor/tinycolor.js"></script>
-    <script src="./HSBRect/HSBRect.js"></script>
-    <script src="./croquis.js/croquis.js"></script>    
-    <script src="./js/shapes.js"></script>
-    <script src="./js/croquispop.js"></script>
-    <!--[if lt IE 10]>
-    <script>
-      // code from: http://stackoverflow.com/a/4448965/1711246
-      function makeUnselectable(node) {
-        if (node.nodeType == 1) {
-          node.setAttribute('unselectable', 'on');
-        }
-        var child = node.firstChild;
-        while (child) {
-          makeUnselectable(child);
-          child = child.nextSibling;
-        }
-      }
-      makeUnselectable(document.body);
-    </script>
-    <![endif]-->
-    <div id="data"></div>
-  </body>
+	<script type="text/javascript" src="./js/fabric.js"></script>
+	<script type="text/javascript" src="./js/app.js"></script>
+	</body>
 </html>
