--- a/trunk/sketch/sketch.html
+++ b/trunk/sketch/sketch.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
-	<head>	
-	<meta charset="UTF-8">
+<html>
+	<head>		
   	<title>Couple T-Shirt Designer</title>
+
   	<link rel="stylesheet" type="text/css" href="./css/sketch.css">
-  	<link rel="stylesheet" type="text/css" href="./css/component.css">	
+  	<link rel="stylesheet" type="text/css" href="./css/component.css">
+
+  	<script src="./js/jquery-2.1.1.min.js"></script>
+  	<script src="./TinyColor/tinycolor.js"></script>
+    <script src="./HSBRect/HSBRect.js"></script>
+  	<script src="./js/fabric.js"></script>
+  	<script src="./js/fabric.canvasex.js"></script>		
 	</head>
-	<body unselectable="on">
-	<div id="brush-image-shelf">
+	<body>
+    <div id="brush-image-shelf">
       <div class="brush-image on" id="circle-brush"></div>
       <img src="./img/brush/b0.png" class="brush-image"></img>
       <img src="./img/brush/b1.png" class="brush-image"></img>
@@ -27,8 +33,8 @@
       <button id="btn-crop" title="Create copy [hit del button to delete]" class="geo-button icon-crop"></button>
     </div>
     <br/>
-	<div id="canvas-area" ></div>
-
+  <div id="canvas-area">	 
+  </div>
 	<div id="right-side">
       <div id="color-picker">
         <div id="color-picker-sb">
@@ -65,7 +71,7 @@
       <button id="btn-flip-vertical">flip vertically</button>
       
     </div>
-	<script type="text/javascript" src="./js/fabric.js"></script>
-	<script type="text/javascript" src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
+    
 	</body>
 </html>
