--- a/sketch/sketch.html
+++ b/sketch/sketch.html
@@ -3,9 +3,9 @@
 	<head>		
   	<title>Couple T-Shirt Designer</title>
 
-  	<link rel="stylesheet" type="text/css" href="./css/sketch.css">
-  	<link rel="stylesheet" type="text/css" href="./css/component.css">
+  	<link rel="stylesheet" type="text/css" href="./css/sketch.css">  	
     <link rel="stylesheet" type="text/css" href="./css/Color.Picker.Classic.css">
+    <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
 
   	<script src="./js/jquery-2.1.1.min.js"></script>
   	<script src="./TinyColor/tinycolor.js"></script>
@@ -16,14 +16,9 @@
 	</head>
 	<body>
     <div id="brush-image-shelf">
-      <div class="brush-image on" id="circle-brush"></div>
-      <img src="./img/brush/b0.png" class="brush-image"></img>
-      <img src="./img/brush/b1.png" class="brush-image"></img>
-      <img src="./img/brush/b2.png" class="brush-image"></img>
-      <img src="./img/brush/b3.png" class="brush-image"></img>
-      <img src="./img/brush/b4.png" class="brush-image"></img>
-      <img src="./img/brush/b5.png" class="brush-image"></img>
-      <img src="./img/brush/b6.png" class="brush-image"></img>
+      <button id="btn-pencil" title="Pencil" class="geo-button icon-pencil"></button>      
+      <button id="btn-brush" title="Circle" class="geo-button icon-brush"></button>
+      <button id="btn-spray" title="Glass storm" class="geo-button icon-spray"></button>
     </div>
     <div id="geometry-shelf">
       <button id="btn-selector" title="Selector" class="geo-button icon-selector"></button>
@@ -43,8 +38,9 @@
         <span>eraser: </span>
         <input id="select-eraser-checkbox" type="checkbox">
         <hr>
-        <span>Brush size: </span>
-        <input id="brush-size-slider" type="range" min="1" max="100">
+        <span>Line width: </span>
+        <span class="info"></span>
+        <input id="brush-size-slider" type="range" min="1" max="100" value="30">
         <br>       
       </div>
       <hr>
@@ -61,7 +57,9 @@
     <script src="./js/Event.js" type="text/javascript"></script> 
     <script src="./js/Color.Picker.Classic.js" type="text/javascript"></script>
     <script src="./js/Color.Space.js" type="text/javascript"></script>
+    <script src="./js/fabricjs-painter.js"></script>
     <script src="./js/app.js"></script>
     
+        
 	</body>
 </html>
