--- a/sketch/sketch.html
+++ b/sketch/sketch.html
@@ -28,7 +28,14 @@
       <button id="btn-round" title="Round [hit del button to delete]" class="geo-button icon-round"></button>
       <button id="btn-star" title="Star [hit del button to delete]" class="geo-button icon-star"></button>
       <button id="btn-heart" title="Heart [hit del button to delete]" class="geo-button icon-heart"></button>
-      <button id="btn-crop" title="Create copy [hit del button to delete]" class="geo-button icon-crop"></button>
+      <span class="fakeInputContainer" style="position: relative; overflow: hidden; z-index: 0; width: 40px; height: 40px;">
+        <button id="btn-open" class="geo-button icon-folder" title="Open file"></button>
+        <input type="file" id="upload-button" capture="camera" name="files[]" style="position: absolute; top: 0px; z-index: 1000; font-size: 1000px; text-align: right; width: inherit; height: inherit; cursor: pointer; right: 0px; opacity: 0;">
+      </span>     
+    </div>
+    <div id="transform-shelf">
+      <button id="btn-clone" title="Create copy" class="geo-button icon-clone"></button>
+      <button id="btn-flip" title="Flip Horizontally" class="geo-button icon-flip"></button>
     </div>
     <br/>
   <div id="canvas-area">	 
@@ -38,21 +45,12 @@
         <span>eraser: </span>
         <input id="select-eraser-checkbox" type="checkbox">
         <hr>
-        <span>Line width: </span>
-        <span class="info"></span>
+        <span>Line width: </span>        
         <input id="brush-size-slider" type="range" min="1" max="100" value="30">
         <br>       
       </div>
       <hr>
-      <button id="clear-button">erase all</button>&nbsp      
-      <button id="fill-button">fill layer</button>&nbsp
-      <button id="merge-button">merge layer</button>
-      <br/>
-      <input type="file" id="upload-button"></input>
-      <br/>
-      <button id="btn-flip-horizon">flip horizontally</button>&nbsp
-      <button id="btn-flip-vertical">flip vertically</button>
-      
+      <button id="clear-button">erase all</button>
     </div>
     <script src="./js/Event.js" type="text/javascript"></script> 
     <script src="./js/Color.Picker.Classic.js" type="text/javascript"></script>
