--- a/sketch/sketch.html
+++ b/sketch/sketch.html
@@ -40,7 +40,8 @@
       <button id="btn-crop" title="Crop" class="geo-button icon-crop"></button>
     </div>
     <br/>
-  <div id="canvas-area">	 
+  <div id="canvas-area">
+    <div id="the-devide"></div>
   </div>
 	<div id="right-side">
       <div id="brush-shelf">
